--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="video-content">
           <div class="mac-screen">
             <img
-              src="images/mac-screen.png"
+              src="https://www.rnwmultimedia.edu.in/images/mac-screen.png"
               alt="mac-screen"
               class="mac-image"
             />
@@ -430,6 +430,128 @@
         </div>
       </div>
     </div>
+    <div class="locations-section">
+      <div class="locations-header">
+        <h3>We are in</h3>
+      </div>
+      <div class="locations-grid">
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689422869872-961501515.png"
+              alt="Surat"
+            />
+            <h3>Surat</h3>
+            <p>in 8 locations</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/ahmedabad/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689571253161-647992325.png"
+              alt="Ahmedabad"
+            />
+            <h3>Ahmedabad</h3>
+            <p>in 6 locations</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/rajkot/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689422909981-84113364.png"
+              alt="Rajkot"
+            />
+            <h3>Rajkot</h3>
+            <p>in 2 locations</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/amreli/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689422920706-236410409.png"
+              alt="Amreli"
+            />
+            <h3>Amreli</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a href="#">
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689570025417-692172.png"
+              alt="Vidhyanagar"
+            />
+            <h3>Vidhyanagar</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/bhavnagar/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1689423527118-382514879.png"
+              alt="Bhavnagar"
+            />
+            <h3>Bhavnagar</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/navsari/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/navsari.png"
+              alt="Navsari"
+            />
+            <h3>Navsari</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/gandhinagar/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/gandhinagar-1.jpg"
+              alt="Gandhinagar"
+            />
+            <h3>Gandhinagar</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+        <div class="location-card">
+          <a
+            href="https://www.rnwmultimedia.edu.in/bharuch/contact.php"
+            target="_blank"
+          >
+            <img
+              src="https://www.rnwmultimedia.edu.in/new_panel/uploads/city_image-1706614514308-195078638.jpg"
+              alt="Bharuch"
+            />
+            <h3>Bharuch</h3>
+            <p>in 1 location</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
